Ensure that the error message wraps

--- a/styles/app.css
+++ b/styles/app.css
@@ -13,7 +13,7 @@ body {
   display: grid;
   grid-template-areas: "header header" "editor main";
   grid-template-rows: min-content 1fr;
-  grid-template-columns: max-content 1fr;
+  grid-template-columns: min-content 1fr;
 }
 
 #editor {
