--- a/styles/editor/mode.css
+++ b/styles/editor/mode.css
@@ -58,6 +58,7 @@
   border: 1px solid #bbb;
   border-radius: 4px;
   color: #000;
+  white-space: nowrap;
 }
 
 #mode button:active {
